Register and Signup

--- a/CoreIdentity/appsettings.json
+++ b/CoreIdentity/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=APACHIE;Integrated Security=True;Connect Timeout=30;Initial Catalog = CoreIdentityDB;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
