Phone Number Validation

--- a/CoreIdentity/appsettings.json
+++ b/CoreIdentity/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=APACHIE;Integrated Security=True;Connect Timeout=30;Initial Catalog = CoreIdentityDB;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
 
-    "DefaultMyAspNetConnectionString": "Data Source=SQL5109.site4now.net;Initial Catalog=db_a77184_coreidentitydb;User Id=db_a77184_coreidentitydb_admin;Password=Core_Db_2022!"
+    "DefaultMyAspNetConnectionString": "Data Source=SQL5109.site4now.net;Initial Catalog=db_a77184_coreidentitydb;User Id=db_a77184_coreidentitydb_admin;Password=******"
   },
 
   "Logging": {
