After Upgrade .Net 7

--- a/CoreIdentity/appsettings.json
+++ b/CoreIdentity/appsettings.json
@@ -1,9 +1,30 @@
-{
+﻿{
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=APACHIE;Integrated Security=True;Connect Timeout=30;Initial Catalog = CoreIdentityDB;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
 
-    "DefaultMyAspNetConnectionString": "Data Source=SQL5109.site4now.net;Initial Catalog=db_a77184_coreidentitydb;User Id=db_a77184_coreidentitydb_admin;Password=******"
+    "DefaultMyAspNetConnectionString": "Data Source=SQL5109.site4now.net;Initial Catalog=db_a77184_coreidentitydb;User Id=db_a77184_coreidentitydb_admin;Password=Core_Db_2022!"
   },
+
+  //Hosting kullandigimiz icin 
+  /*
+   * Secret.json içerisindeki  key-value dosyaları publish dosyasına eklenmez.
+
+      Eğer  cloud'a atsaydınız bu değerleri cloud ortamda tanımlayabilirdiniz.
+
+      Ama hosting kullandığınız için  secret.json dosyası içerisindeki değerleri normal appsetting.json dosyasına taşıyın
+   */
+
+
+
+
+  "Authentication:Facebook:AppId": "341837414170476",
+  "Authentication:Facebook:AppSecret": "b8f7f9d6aa80a05ab3c03d3f25f41a7c",
+  "Authentication:Google:ClientID": "446171394415-3t23550ge0k3asa1ffa87o98ikvd3d1s.apps.googleusercontent.com",
+  "Authentication:Google:ClientSecret": "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",
+  "Authentication:Microsoft:ClientID": "0038e245-3012-4eca-94d8-eacc1968f72d",
+  "Authentication:Microsoft:ClientSecret": "aXg7Q~JRQeirzKsFzqQJRoq0FdSUckCwMWxH5",
+
+
 
   "Logging": {
     "LogLevel": {
